--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    font-family: 'Montserrat';
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 90%;
+    margin: 0 auto;
+    padding: 1.3em 0;
+    display: grid;
+    grid-template-columns: 30% auto;
+    z-index: 1;
+
+    a {
+        color: white;
+    }
+}
+
+section {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+}
